c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/void_array_pointer_in_param_type.c
// array of incomplete element type is illegal
int foo(void (*bad_array)[3]) {
    return bad_array == 0;
}

int main(void) {
    return 0;
}